# digit-recognition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/c/: main.c  mnist.c  network.c
src/include/: mnist.h  network.h
